<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.wkclz.microapp</groupId>
        <artifactId>sh-microapp</artifactId>
        <version>5.0.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>micro-dict</artifactId>
    <version>${revision}</version>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.wkclz.iam</groupId>
            <artifactId>iam-sdk</artifactId>
            <version>${sh-iam.version}</version>
        </dependency>
        <dependency>
            <groupId>com.wkclz.framework</groupId>
            <artifactId>sh-mybatis</artifactId>
        </dependency>
        <dependency>
            <groupId>com.wkclz.framework</groupId>
            <artifactId>sh-redis</artifactId>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.wkclz.generator</groupId>
                <artifactId>generator-client</artifactId>
                <version>5.0.0-SNAPSHOT</version>
                <configuration>
                    <options>
                        <option>38e8237446338d8691813c7e7a8bfaf8</option>
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>